Implimented feature file for dynamic control section to handle checkbox

--- a/src/test/java/com/venntro/test/config/OR.properties
+++ b/src/test/java/com/venntro/test/config/OR.properties
@@ -1,4 +1,5 @@
 loginurl=http://the-internet.herokuapp.com/login
+dynamic_control_url=http://the-internet.herokuapp.com/dynamic_controls
 
 #locators for login testcase
 username=//*[@id='username']
@@ -7,3 +8,9 @@ loginButton=//*[@id='login']/button
 logoutButton=//*[@id='content']/div/a
 successfullLogin=//*[@id='flash']			
 failureLogin=//*[@id='flash']
+
+#locators for handling checkbox under dynamic controls
+removeButton=//*[@id='btn']
+addButton=//*[@id='btn']
+SuccessMessage=//*[@id='message']
+ConfirmationMessage=//*[@id='checkbox']
