--- a/src/test/java/com/venntro/test/config/OR.properties
+++ b/src/test/java/com/venntro/test/config/OR.properties
@@ -1,5 +1,6 @@
 loginurl=http://the-internet.herokuapp.com/login
 dynamic_control_url=http://the-internet.herokuapp.com/dynamic_controls
+dynamic_loading_section_url=http://the-internet.herokuapp.com/dynamic_loading
 
 #locators for login testcase
 username=//*[@id='username']
@@ -14,3 +15,8 @@ removeButton=//*[@id='btn']
 addButton=//*[@id='btn']
 SuccessMessage=//*[@id='message']
 ConfirmationMessage=//*[@id='checkbox']
+
+# locators for handling dynamic loading section
+example1Link=//div[@id='content']/div/a 
+startButton=//*[@id='start']/button
+hiddenMessage=//div[@id='finish']/h4
